# enclave

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  RUN.md  THREAT_MODEL.md  enclave-fort-friends.json  enclave-nite-friends.json
.github/workflows/: ci.yml
ci/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: call.rs  lib.rs  main.rs  session.rs  transfer.rs
crates/client/src/ui/: index.html
crates/client/tests/: client_flow.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: blob.rs  error.rs  group.rs  identity.rs  lib.rs  media.rs  ring.rs  sign.rs  workspace.rs
crates/crypto/tests/: e2e_text.rs  identity_persistence.rs  last_resort.rs  media_seal.rs  mls_group.rs  multiparty.rs  robustness.rs
crates/media/: Cargo.toml
crates/media/examples/: camera_probe.rs  mic_loopback.rs  mic_probe.rs  screen_probe.rs  system_audio_probe.rs
crates/media/src/: audio.rs  camera.rs  denoise.rs  device.rs  error.rs  frame.rs  jitter.rs  lib.rs  screen.rs  system_audio.rs  video.rs
crates/media/src/screen/: linux.rs  mod.rs  stub.rs  windows.rs
crates/media/src/screen/linux/: mod.rs  portal.rs  x11.rs
crates/media/src/system_audio/: linux.rs  mod.rs  stub.rs  windows.rs
crates/media/tests/: audio_codec.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/transport/: Cargo.toml
crates/transport/src/: accounts.rs  avatarstore.rs  client.rs  error.rs  filestore.rs  friends.rs  groups.rs  lib.rs  media_socket.rs  msgqueue.rs  opaque.rs  ratelimit.rs  relay.rs  server.rs  workspaces.rs
crates/transport/tests/: audio_full_stack.rs  media_e2e.rs  relay_core.rs  relay_e2e.rs  tls_signaling.rs  udp_media.rs
crates/transport/tests/common/: mod.rs
design/: redesign.html
docs/: PRIMITIVES.md  WORKSPACES.md
