[package]
name = "enclave-client"
description = "The client app: orchestrates crypto + media + transport behind a WebView UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "enclave_client"
path = "src/lib.rs"

[[bin]]
name = "enclave"
path = "src/main.rs"

[dependencies]
enclave-protocol = { path = "../protocol" }
enclave-crypto = { path = "../crypto" }
enclave-media = { path = "../media" }
enclave-transport = { path = "../transport" }
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
wry = "0.55.1"
tao = "0.35.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
getrandom = "0.2"
# Phase 6 adds: wry/tao (self-contained WebView window; HTML/CSS/JS front end).

[dev-dependencies]
enclave-transport = { path = "../transport" }
