[package]
name = "enclave-crypto"
description = "Identity keys, MLS groups, SFrame media-key schedule, fingerprints. Assembles vetted primitives; hand-rolls none."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.11.0"
enclave-protocol = { path = "../protocol" }
hex = "0.4.3"
hkdf = "0.13.0"
openmls = "0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
serde_json.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
tls_codec = "0.4.2"
zeroize = "1.9.0"
