[package]
name = "enclave-crypto"
description = "Identity keys, MLS groups, SFrame media-key schedule, fingerprints. Assembles vetted primitives; hand-rolls none."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.11.0"
curve25519-dalek = { version = "4", features = ["serde"] }
ed25519-dalek = "2.2.0"
enclave-protocol = { path = "../protocol" }
getrandom = "0.2"
hex = "0.4.3"
hkdf = "0.13.0"
openmls = "0.8.1"
openmls_basic_credential = { version = "0.5.0", features = ["clonable"] }
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11.0"
bincode = "1.3"
thiserror.workspace = true
tls_codec = "0.4.2"
zeroize = "1.9.0"
