[package]
name = "enclave-media"
description = "Capture, encode, and decode audio/video. Runs the real-time hot path."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
audiopus = "0.2.0"
cpal = "0.18.1"
enclave-protocol = { path = "../protocol" }
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }
openh264 = "0.9"
thiserror.workspace = true

# Screen capture is Windows-only (Windows Graphics Capture / DXGI duplication).
[target.'cfg(windows)'.dependencies]
windows-capture = "2.0.0"
