[package]
name = "enclave-media"
description = "Capture, encode, and decode audio/video. Runs the real-time hot path."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
audiopus = "0.2.0"
cpal = "0.18.1"
enclave-protocol = { path = "../protocol" }
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }
openh264 = "0.9"
thiserror.workspace = true

# Screen/window capture and WASAPI system-audio loopback are Windows-only.
[target.'cfg(windows)'.dependencies]
windows-capture = "2.0.0"
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }
