[package]
name = "enclave-transport"
description = "Signaling channel (TLS) and real-time media transport to the SFU."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
enclave-protocol = { path = "../protocol" }
bincode = "1.3"
futures-util = "0.3.32"
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }
tokio-tungstenite = "0.30.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
argon2 = "0.5.3"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
enclave-crypto = { path = "../crypto" }
enclave-media = { path = "../media" }
rcgen = "0.14.8"
