[package]
name = "enclave-transport"
description = "Signaling channel (TLS) and real-time media transport to the SFU."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
enclave-protocol = { path = "../protocol" }
# The relay validates workspace op-log entries (signatures + authorization replay)
# at ingress via enclave_crypto::workspace, so one bad op cannot brick a log.
enclave-crypto = { path = "../crypto" }
bincode = "1.3"
futures-util = "0.3.32"
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "fs"] }
tokio-tungstenite = "0.30.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
argon2 = "0.5.3"
serde = { workspace = true, features = ["derive"] }
opaque-ke = { version = "4.0.1", features = ["argon2"] }
sha2 = "0.10"
rand = "0.8"
fs2 = "0.4"

[dev-dependencies]
enclave-media = { path = "../media" }
rcgen = "0.14.8"
